First part of theoretical overview is done

--- a/References/References.bib
+++ b/References/References.bib
@@ -3705,3 +3705,264 @@ abstract = {We report the first quantum-key-distribution (QKD) systems capable o
 }
 
 
+@inproceedings{BGW88,
+author = {Ben-Or, Michael and Goldwasser, Shafi and Wigderson, Avi},
+title = {Completeness Theorems for Non-Cryptographic Fault-Tolerant Distributed Computation},
+year = {1988},
+isbn = {0897912640},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/62212.62213},
+doi = {10.1145/62212.62213},
+abstract = {Every function of n inputs can be efficiently computed by a complete network of n processors in such a way that: If no faults occur, no set of size t < n/2 of players gets any additional information (other than the function value),Even if Byzantine faults are allowed, no set of size t < n/3 can either disrupt the computation or get additional information.Furthermore, the above bounds on t are tight!},
+booktitle = {Proceedings of the Twentieth Annual ACM Symposium on Theory of Computing},
+pages = {1–10},
+numpages = {10},
+location = {Chicago, Illinois, USA},
+series = {STOC '88}
+}
+
+@inproceedings{CCD88,
+author = {Chaum, David and Cr\'{e}peau, Claude and Damgard, Ivan},
+title = {Multiparty Unconditionally Secure Protocols},
+year = {1988},
+isbn = {0897912640},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/62212.62214},
+doi = {10.1145/62212.62214},
+abstract = {Under the assumption that each pair of participants can communicate secretly, we show that any reasonable multiparty protocol can be achieved if at least 2n/3 of the participants are honest. The secrecy achieved is unconditional. It does not rely on any assumption about computational intractability.},
+booktitle = {Proceedings of the Twentieth Annual ACM Symposium on Theory of Computing},
+pages = {11–19},
+numpages = {9},
+location = {Chicago, Illinois, USA},
+series = {STOC '88}
+}
+
+@inproceedings{PWM+20,
+  doi = {10.1109/hpec43674.2020.9286159},
+  url = {https://doi.org/10.1109/hpec43674.2020.9286159},
+  year = {2020},
+  month = sep,
+  publisher = {{IEEE}},
+  author = {Rushi Patel and Pierre-Francois Wolfe and Robert Munafo and Mayank Varia and Martin Herbordt},
+  title = {Arithmetic and Boolean Secret Sharing {MPC} on {FPGAs} in the Data Center},
+  booktitle = {2020 {IEEE} High Performance Extreme Computing Conference ({HPEC})}
+}
+
+@inproceedings{BMR90,
+author = {Beaver, D. and Micali, S. and Rogaway, P.},
+title = {The Round Complexity of Secure Protocols},
+year = {1990},
+isbn = {0897913612},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/100216.100287},
+doi = {10.1145/100216.100287},
+booktitle = {Proceedings of the Twenty-Second Annual ACM Symposium on Theory of Computing},
+pages = {503–513},
+numpages = {11},
+location = {Baltimore, Maryland, USA},
+series = {STOC '90}
+}
+
+@inproceedings{NPS99,
+author = {Naor, Moni and Pinkas, Benny and Sumner, Reuban},
+title = {Privacy Preserving Auctions and Mechanism Design},
+year = {1999},
+isbn = {1581131763},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/336992.337028},
+doi = {10.1145/336992.337028},
+booktitle = {Proceedings of the 1st ACM Conference on Electronic Commerce},
+pages = {129–139},
+numpages = {11},
+location = {Denver, Colorado, USA},
+series = {EC '99}
+}
+
+@incollection{Pinkas2009,
+  doi = {10.1007/978-3-642-10366-7_15},
+  url = {https://doi.org/10.1007/978-3-642-10366-7_15},
+  year = {2009},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {250--267},
+  author = {Benny Pinkas and Thomas Schneider and Nigel P. Smart and Stephen C. Williams},
+  title = {Secure Two-Party Computation Is Practical},
+  booktitle = {Advances in Cryptology {\textendash} {ASIACRYPT} 2009}
+}
+
+@incollection{Kolesnikov2005,
+  doi = {10.1007/11593447_8},
+  url = {https://doi.org/10.1007/11593447_8},
+  year = {2005},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {136--155},
+  author = {Vladimir Kolesnikov},
+  title = {Gate Evaluation Secret Sharing and Secure One-Round Two-Party Computation},
+  booktitle = {Lecture Notes in Computer Science}
+}
+
+@incollection{Zahur2015,
+  doi = {10.1007/978-3-662-46803-6_8},
+  url = {https://doi.org/10.1007/978-3-662-46803-6_8},
+  year = {2015},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {220--250},
+  author = {Samee Zahur and Mike Rosulek and David Evans},
+  title = {Two Halves Make a Whole},
+  booktitle = {Advances in Cryptology - {EUROCRYPT} 2015}
+}
+
+@incollection{Kolesnikov2009,
+  doi = {10.1007/978-3-642-10433-6_1},
+  url = {https://doi.org/10.1007/978-3-642-10433-6_1},
+  year = {2009},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {1--20},
+  author = {Vladimir Kolesnikov and Ahmad-Reza Sadeghi and Thomas Schneider},
+  title = {Improved Garbled Circuit Building Blocks and Applications to Auctions and Computing Minima},
+  booktitle = {Cryptology and Network Security}
+}
+
+@INPROCEEDINGS{AIK11,
+  author={Applebaum, Benny and Ishai, Yuval and Kushilevitz, Eyal},
+  booktitle={2011 IEEE 52nd Annual Symposium on Foundations of Computer Science}, 
+  title={How to Garble Arithmetic Circuits}, 
+  year={2011},
+  volume={},
+  number={},
+  pages={120-129},
+  doi={10.1109/FOCS.2011.40}}
+  
+  @misc{DKMQ12,
+    author       = {Nico Döttling and
+		    Daniel Kraschewski and
+		    Jörn Müller-Quade},
+    title        = {David and Goliath Oblivious Affine Function Evaluation - Asymptotically Optimal Building Blocks for Universally Composable Two-Party Computation from a Single Untrusted Stateful Tamper-Proof Hardware Token},
+    howpublished = {Cryptology ePrint Archive, Report 2012/135},
+    year         = {2012},
+    note         = {\url{https://ia.cr/2012/135}},
+}
+
+@InProceedings{GNN17,
+author="Ghosh, Satrajit
+and Nielsen, Jesper Buus
+and Nilges, Tobias",
+editor="Takagi, Tsuyoshi
+and Peyrin, Thomas",
+title="Maliciously Secure Oblivious Linear Function Evaluation with Constant Overhead",
+booktitle="Advances in Cryptology -- ASIACRYPT 2017",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="629--659",
+isbn="978-3-319-70694-8"
+}
+
+@inproceedings{DGNBNT17,
+author = {D\"{o}ttling, Nico and Ghosh, Satrajit and Nielsen, Jesper Buus and Nilges, Tobias and Trifiletti, Roberto},
+title = {TinyOLE: Efficient Actively Secure Two-Party Computation from Oblivious Linear Function Evaluation},
+year = {2017},
+isbn = {9781450349468},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3133956.3134024},
+doi = {10.1145/3133956.3134024},
+booktitle = {Proceedings of the 2017 ACM SIGSAC Conference on Computer and Communications Security},
+pages = {2263–2276},
+numpages = {14},
+keywords = {ole, two-party computation, uc-security, constant computation, constant communication},
+location = {Dallas, Texas, USA},
+series = {CCS '17}
+}
+
+@InProceedings{IPS09,
+author="Ishai, Yuval
+and Prabhakaran, Manoj
+and Sahai, Amit",
+editor="Reingold, Omer",
+title="Secure Arithmetic Computation with No Honest Majority",
+booktitle="Theory of Cryptography",
+year="2009",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="294--314",
+isbn="978-3-642-00457-5"
+}
+  
+  
+  @InProceedings{ADINZ17,
+author="Applebaum, Benny
+and Damg{\aa}rd, Ivan
+and Ishai, Yuval
+and Nielsen, Michael
+and Zichron, Lior",
+editor="Katz, Jonathan
+and Shacham, Hovav",
+title="Secure Arithmetic Computation with Constant Computational Overhead",
+booktitle="Advances in Cryptology -- CRYPTO 2017",
+year="2017",
+publisher="Springer International Publishing",
+address="Cham",
+pages="223--254",
+isbn="978-3-319-63688-7"
+}
+  
+  @inproceedings{HIMV19,
+author = {Hazay, Carmit and Ishai, Yuval and Marcedone, Antonio and Venkitasubramaniam, Muthuramakrishnan},
+title = {LevioSA: Lightweight Secure Arithmetic Computation},
+year = {2019},
+isbn = {9781450367479},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3319535.3354258},
+doi = {10.1145/3319535.3354258},
+pages = {327–344},
+numpages = {18},
+keywords = {oblivious linear evaluation (OLE), secure arithmetic two-party computation, MPC-in-the-head},
+location = {London, United Kingdom},
+series = {CCS '19}
+}
+
+@inproceedings{BCGI18,
+  doi = {10.1145/3243734.3243868},
+  url = {https://doi.org/10.1145/3243734.3243868},
+  year = {2018},
+  month = jan,
+  publisher = {{ACM}},
+  author = {Elette Boyle and Geoffroy Couteau and Niv Gilboa and Yuval Ishai},
+  title = {Compressing Vector {OLE}},
+  booktitle = {Proceedings of the 2018 {ACM} {SIGSAC} Conference on Computer and Communications Security}
+}
+
+ @article{CDIKLOV19,
+  title={Reusable Non-Interactive Secure Computation},
+  booktitle={Advances in Cryptology – CRYPTO 2019},
+  series={Lecture Notes in Computer Science},
+  publisher={Springer},
+  volume={11694},
+  pages={462-488},
+  doi={10.1007/978-3-030-26954-8_15},
+  author={Melissa Chase and Yevgeniy Dodis and Yuval Ishai and Daniel Kraschewski and Tianren Liu and Rafail Ostrovsky and Vinod Vaikuntanathan},
+  year=2019
+}
+
+@InProceedings{GN19,
+author="Ghosh, Satrajit
+and Nilges, Tobias",
+editor="Ishai, Yuval
+and Rijmen, Vincent",
+title="An Algebraic Approach to Maliciously Secure Private Set Intersection",
+booktitle="Advances in Cryptology -- EUROCRYPT 2019",
+year="2019",
+publisher="Springer International Publishing",
+address="Cham",
+pages="154--185",
+isbn="978-3-030-17659-4"
+}
+
+
+
+
