Technical overview chapter finished

--- a/References/References.bib
+++ b/References/References.bib
@@ -3963,6 +3963,122 @@ pages="154--185",
 isbn="978-3-030-17659-4"
 }
 
+@misc{U17,
+  author        = {Dominique Unruh},
+  title         = {Lecture notes in Quantum Cryptography},
+  month         = {November},
+  year          = {2017},
+  publisher={University of Tartu}
+}
+
+@article{S48,
+  added-at = {2021-09-19T18:40:37.000+0200},
+  author = {Shannon, Claude Elwood},
+  biburl = {https://www.bibsonomy.org/bibtex/29f88587b33c82f692b61d129eb2f2517/steschum},
+  interhash = {754130207906fcec16a53d330eeff348},
+  intrahash = {9f88587b33c82f692b61d129eb2f2517},
+  journal = {The Bell System Technical Journal},
+  keywords = {imported},
+  pages = {379--423},
+  timestamp = {2021-09-19T18:41:56.000+0200},
+  title = {A Mathematical Theory of Communication},
+  url = {http://plan9.bell-labs.com/cm/ms/what/shannonday/shannon1948.pdf},
+  urldate = {2003-04-22},
+  volume = 27,
+  year = 1948
+}
+
+@misc{V10,
+  author        = {Venkatesan Guruswami},
+  title         = {Lecture notes in Introduction to Coding Theory},
+  month         = {January},
+  year          = {2010},
+  publisher={Carnegie Mellon University},
+}
+
+@article{Dupuis2015,
+  doi = {10.1109/tit.2014.2371464},
+  year = {2015},
+  month = feb,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {61},
+  number = {2},
+  pages = {1093--1112},
+  author = {Frederic Dupuis and Omar Fawzi and Stephanie Wehner},
+  title = {Entanglement Sampling and Applications},
+  journal = {{IEEE} Transactions on Information Theory}
+}
+
+@incollection{HK97,
+  doi = {10.1007/bfb0052345},
+  year = {1997},
+  publisher = {Springer Berlin Heidelberg},
+  pages = {172--189},
+  author = {Shai Halevi and Hugo Krawczyk},
+  title = {{MMH}: Software message authentication in the Gbit/second rates},
+  booktitle = {Fast Software Encryption}
+}
+
+@article{TSSR11,
+  doi = {10.1109/tit.2011.2158473},
+  year = {2011},
+  month = aug,
+  publisher = {Institute of Electrical and Electronics Engineers ({IEEE})},
+  volume = {57},
+  number = {8},
+  pages = {5524--5535},
+  author = {Marco Tomamichel and Christian Schaffner and Adam Smith and Renato Renner},
+  title = {Leftover Hashing Against Quantum Side Information},
+  journal = {{IEEE} Transactions on Information Theory}
+}
+
+@article{Unruh04,
+      title={Simulatable security for quantum protocols}, 
+      author={Dominique Unruh},
+      year={2004},
+      journal={arXiv},
+      volume={0409125}
+}
+@article{BenOrMay04,
+      title={General Security Definition and Composability for Quantum and Classical Protocols}, 
+      author={Michael Ben-Or and Dominic Mayers},
+      year={2004},
+      journal={arXiv},
+      volume={0409062},
+      
+      }
+
+@InProceedings{Unruh10,
+author="Unruh, Dominique",
+title="Universally Composable Quantum Multi-party Computation",
+booktitle="Advances in Cryptology -- EUROCRYPT 2010",
+year="2010",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="486--505",
+isbn="978-3-642-13190-5"
+}
+
+@article{CBGLM21,
+  doi = {10.3390/e23081001},
+  year = {2021},
+  month = jul,
+  publisher = {{MDPI} {AG}},
+  volume = {23},
+  number = {8},
+  pages = {1001},
+  author = {Bruno Costa and Pedro Branco and Manuel Goul{\~{a}}o and Mariano Lemus and Paulo Mateus},
+  title = {Randomized Oblivious Transfer for Secure Multiparty Computation in the Quantum Setting},
+  journal = {Entropy}
+}
+
+
+
+
+
+
+
+
 
 
 
