--- a/Thesis_Preamble.tex
+++ b/Thesis_Preamble.tex
@@ -774,3 +774,44 @@
 %}
 
 \usepackage[toc,page]{appendix}
+
+\usepackage{cryptocode}
+%\usepackage{amsbsy}
+\usepackage{amssymb}
+\usepackage{amsmath}
+\DeclareMathOperator*{\argmax}{arg\,max}
+\DeclareMathOperator*{\argmin}{arg\,min}
+\usepackage{bm}
+\usepackage{dsfont}
+
+\newcommand*{\vertbar}{\rule[-1ex]{0.5pt}{2.5ex}}
+\newcommand*{\bigvertbar}{\rule[-1ex]{0.5pt}{4.5ex}}
+\newcommand*{\horzbar}{\rule[.5ex]{2.5ex}{0.5pt}}
+\newcommand*{\bighorzbar}{\rule[.5ex]{4.5ex}{0.5pt}}
+
+\newlength\oversetwidth
+\newlength\underwidth
+\newcommand\alignedoverset[2]{
+  % #1 = over
+  % #2 = under
+  \settowidth\oversetwidth{$\overset{#1}{#2}$}
+  \settowidth\underwidth{$#2$}
+  \setlength\oversetwidth{\oversetwidth-\underwidth}
+  \hspace{.5\oversetwidth}
+  &
+  \settowidth\oversetwidth{$\overset{#1}{#2}$}
+  \settowidth\underwidth{$#2$}
+  \setlength\oversetwidth{\oversetwidth-\underwidth}
+  \hspace{-.5\oversetwidth}
+  \overset{#1}{#2}
+}
+
+
+\usepackage{amsthm}
+\usepackage{authblk}
+\theoremstyle{definition}
+%\newtheorem{definition}{Definition}[section]
+%\newtheorem{theorem}{Theorem}[section]
+%\newtheorem{corollary}{Corollary}[theorem]
+%\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{claim}[theorem]{Claim}
